# veeper-speech

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml  security.yml
tests/: conftest.py  test_file_utils.py  test_speech_recognizers.py
tests/post_processing/: test_openrouter_post_processing_integration.py  test_post_processing_openrouter.py  test_post_processing_service.py
veespeech/: __init__.py  faster_whisper.py  whisper.py
veespeech/post_processing/: __init__.py  exceptions.py  openrouter.py  prompts.py  service.py
