[tool.poetry]
name = "veeper-speech"
version = "0.3.1"
description = ""
authors = ["avdonin.pb@yandex.ru"]
readme = "README.md"
packages = [{include = "veespeech"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai-whisper = ">=20250625,<20250626"
faster-whisper = ">=1.2.0,<2.0.0"
soundfile = ">=0.13.1,<0.14.0"
transformers = ">=4.57.0,<5.0.0"

[project]
name = "veeper-speech"
version = "0.3.1"
description = ""
authors = [
    {name = "avdonin.pb@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai-whisper (>=20250625,<20250626)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "transformers (>=4.57.0,<5.0.0)",
]

[project.optional-dependencies]
gpu = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
]
cpu = [
    "torch==2.8.0+cpu",
    "torchaudio==2.8.0+cpu",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
tox = ">=4.30.3,<5.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=6.1.0,<7.0.0"
flake8 = ">=7.1.1,<8.0.0"
bandit = ">=1.7.10,<2.0.0"
safety = ">=3.2.0,<4.0.0"
radon = ">=6.0.1,<7.0.0"
mypy = ">=1.11.0,<2.0.0"

[tool.poetry.group.gpu.dependencies]
torch = ">=2.8.0,<3.0.0"
torchaudio = ">=2.8.0,<3.0.0"


[tool.poetry.group.cpu.dependencies]
torch = "2.8.0+cpu"
torchaudio = "2.8.0+cpu"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["veespeech"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["veespeech*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
veespeech = ["py.typed"]

[[tool.poetry.include]]
path = "veespeech/py.typed"

# Code quality tool configurations
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 120

[tool.bandit]
exclude_dirs = ["tests", "test_*"]

[tool.radon]
exclude = ["tests/*", "test_*"]

[tool.mypy]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["whisper", "faster_whisper"]
ignore_missing_imports = true
